fix for sidebar on small devices

--- a/src/sass/_media.sass
+++ b/src/sass/_media.sass
@@ -60,3 +60,6 @@
         &_start
             display: block
             margin: 20px auto 0 auto
+    .sidebar
+        &__links
+            grid-template-columns: repeat(2, minmax(120px, 200px))
